[tool.poetry]
name = "Project"
version = "0.1.0"
description = ""
authors = ["IhorT <thekalgorsplay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.1"
waitress = "^2.0.0"
SQLAlchemy = "^1.4.26"
PyMySQL = "^1.0.2"
alembic = "^1.7.4"
psycopg2 = "^2.9.2"
cryptography = "^35.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
